--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,2 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@400;800&family=Open+Sans&family=Oswald&display=swap');
-@import 'variables.scss';
+@import url("https://fonts.googleapis.com/css2?family=Nunito:wght@400;800&family=Open+Sans&family=Oswald&display=swap");
+@import "_variables.scss";
+@import "_header.scss";
