--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -1,21 +1,80 @@
+body {
+  margin: 0;
+}
+
 .header {
   background-color: $primary_color;
+
+  .nav {
+    display: flex;
+    justify-content: space-between;
+    padding: 0.75rem;
+
+    .nav__list {
+      list-style: none;
+      display: flex;
+      align-items: start;
+      width: 100%;
+      justify-content: space-between;
+      margin: 0;
+      padding: 0;
+
+      .nav__logo {
+        width: 56%;
+        max-width: 7.81rem;
+        display: flex;
+        margin: auto;
+      }
+    }
+    .nav__link {
+      font-family: $font_oswald;
+      font-size: 12px;
+      color: $dark_color;
+      text-decoration: none;
+      /* padding-right: 1rem;
+      padding-top: 0.6rem; */
+    }
+
+    .nav__menu__icon {
+      color: $dark_color;
+      &:hover {
+        color: $hover_color;
+      }
+    }
+    .nav__link--hiden {
+      display: none;
+    }
+  }
 }
 
-.container__img {
-  height: 100%;
-  width: 140px;
-  padding-top: 20px;
-}
+@media screen and (min-width: 600px) {
+  .header {
+    .nav {
+      display: flex;
+      justify-content: space-between;
+      padding: 0.75rem;
 
-.nav {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-}
+      .nav__link {
+        color: $dark_color;
+        font-size: 0.5rem;
+        &:hover {
+          color: $hover_color;
+        }
+      }
 
-.nav__link {
-  font-family: $font_oswald;
-  color: $dark_color;
-  text-decoration: none;
-}
+      .nav__link--hiden {
+        display: inline-block;
+      }
+
+      .nav__list {
+        align-items: center;
+        flex-direction: row-reverse;
+        justify-content: center;
+        gap: 1rem;
+      }
+      .nav__menu__list {
+        order: 5;
+      }
+    }
+  }
+} ;
