--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,2 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@400;800&family=Open+Sans&family=Oswald&display=swap');
-@import 'variables.scss';
+@import '../scss/variables';
+@import '../scss/header';
+@import '../scss/footer';
+
+body {
+  font-size: 16px;
+  font-family: $font_open_sans;
+}
