--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -31,8 +31,6 @@ body {
       font-size: 12px;
       color: $dark_color;
       text-decoration: none;
-      /* padding-right: 1rem;
-      padding-top: 0.6rem; */
     }
 
     .nav__menu__icon {
@@ -72,8 +70,8 @@ body {
         justify-content: center;
         gap: 1rem;
       }
-      .nav__menu__list {
-        order: 5;
+      .nav__menu__icon {
+        display: none;
       }
     }
   }
