--- a/scss/works.scss
+++ b/scss/works.scss
@@ -3,7 +3,18 @@
 @import "../scss/header";
 @import "../scss/footer";
 
-body {
-  font-size: 16px;
-  font-family: $font_open_sans;
+@media screen and (min-width: 600px) {
+  body {
+    font-size: 16px;
+    font-family: $font_open_sans;
+  }
+
+  .main {
+    display: grid;
+    grid-template-columns: auto auto auto;
+
+    .container_img {
+      height: 100%;
+    }
+  }
 }
